--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -3,20 +3,26 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write  # This is crucial for pushing to gh-pages branch
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      # Create symlink from public/assets/ to src/assets/
-      - name: Create assets symlink
+        with:
+          fetch-depth: 0  # Important for peaceiris/actions-gh-pages
+
+      # Create symlink structure
+      - name: Setup assets
         run: |
           mkdir -p public/assets
-          ln -s $(pwd)/src/assets/contact.vcf public/assets/contact.vcf
-          
-      # Deploy public/ folder to GitHub Pages
+          ln -sf $(pwd)/src/assets/contact.vcf public/assets/
+
+      # Deploy to gh-pages
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+          keep_files: true  # Preserve existing files in gh-pages
